--- a/index.html
+++ b/index.html
@@ -37,33 +37,33 @@
             <p class="logo__text">Больше праздников - богу праздников</p>
 
             <div class="gallery">
-                text
+                <!-- text -->
             </div>
 
             <div class="main__block">
                 <div class="block__price">
                     <a href="./pages/holiday.html"><img src="./img/main/back__holiday.png" class="test__price" alt="#"></a>
-                    8 Марта
+                    <p>8 Марта</p>
                 </div>
                 <div class="block__price">
                     <a href="./pages/holiday.html"><img src="./img/main/back__holiday.png" class="test__price" alt="#"></a>
-                    23 Февраля
+                    <p>23 Февраля</p>
                 </div>
                 <div class="block__price">
                     <a href="./pages/holiday.html"><img src="./img/main/back__holiday.png" class="test__price" alt="#"></a>
-                    Новый год
+                    <p>Новый год</p>
                 </div>
                 <div class="block__price">
                     <a href="./pages/holiday.html"><img src="./img/main/back__holiday.png" class="test__price" alt="#"></a>
-                    Корпоратив
+                    <p>Корпоратив</p>
                 </div>
                 <div class="block__price">
                     <a href="./pages/holiday.html"><img src="./img/main/back__holiday.png" class="test__price" alt="#"></a>
-                    День рождения
+                    <p>День рождения</p>
                 </div>
                 <div class="block__price">
                     <a href="./pages/holiday.html"><img src="./img/main/back__holiday.png" class="test__price" alt="#"></a>
-                    Свадьба
+                    <p>Свадьба</p>
                 </div>
             </div>
             
@@ -86,9 +86,9 @@
                     <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A65791f57e607f7a10f9e4f589acd35e1d45eb015c0270275750888acddd98c4c&amp;source=constructor" width="300" height="300" frameborder="0"></iframe>
                 </div>
                 <div class="addres">
-                    <p>О нас</p> 
-                    <p>Акции</p> 
-                    <p>Политика конфиденциальности</p> 
+                    <a href="/pages/about.html"><p>О нас</p></a> 
+                        <p>Акции</p> 
+                        <p>Политика конфиденциальности</p> 
                 </div>
                 <div class="soc__link">
                     <p>© MHD 2022 - 2022</p>
