--- a/pages/basket.html
+++ b/pages/basket.html
@@ -32,7 +32,53 @@
             </div>
         </Header>
         <div class="basket__main">
-            <div class="basket__name">Корзина пуста</div> 
+            <div class="basket__main__name">Корзина пуста</div>
+            
+            <div class="basket__box">
+                <div class="basket__line">
+                    <div class="basket__name name__first">Корпоратив</div>
+                    <div class="basket__price price__first">40 000₽
+                        <img src="../img/basket/close.svg" alt="">
+                    </div>
+ 
+                </div>
+            </div>
+
+            <div class="basket__box">
+                <div class="basket__line">
+                    <div class="basket__name">Видеооператор</div>
+                    <div class="basket__price">15 000₽
+                        <img src="../img/basket/close.svg" alt="">
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="basket__box">
+                <div class="basket__line">
+                    <div class="basket__name">Декор и оформление</div>
+                    <div class="basket__price">10 000₽
+                        <img src="../img/basket/close.svg" alt="">
+                    </div>
+                </div>
+            </div>
+
+            <div class="basket__box">
+                <div class="basket__line">
+                    <div class="basket__name">Ведущий</div>
+                    <div class="basket__price">15 000₽
+                        <img src="../img/basket/close.svg" alt="">
+                    </div>
+                </div>
+            </div>
+
+            <div class="total__price">
+                Итого: 80 000₽
+            </div>
+
+            <a href="decor.html">
+                <input class="btn__ofor" type="button" value="оформить">
+            </a>
         </div>
     </body>
 </html>
