--- a/pages/holiday.html
+++ b/pages/holiday.html
@@ -80,6 +80,9 @@
             </div>
 
             <div class="price">40.000₽</div>
+            <a href="./basket.html">
+                <input class="btn__ofor" type="button" value="добавить в корзину">
+            </a>
         </div>
     </div>
 </body>
