--- a/pages/profile.html
+++ b/pages/profile.html
@@ -38,6 +38,7 @@
             </a>
         </div>
     </Header>
+    
     <div class="profile__main">
         <div class="profile__nav__block">
             <div class="avatar">
@@ -155,8 +156,9 @@
                 </div>
 
                 <hr>
+                <hr>
 
-                <a href="">
+                <a href="reviews.html">
                     <div class="my__review">Мои отзывы</div>
                 </a>
                 <a href="history.html">
