--- a/index.html
+++ b/index.html
@@ -42,28 +42,40 @@
 
             <div class="main__block">
                 <div class="block__price">
-                    <a href="./pages/holiday.html"><img src="./img/main/back__holiday.png" class="test__price" alt="#"></a>
-                    <p>8 Марта</p>
+                    <a href="./pages/holiday.html">
+                        <img src="./img/main/back__holiday.png" class="test__price" alt="#">
+                        <p>8 Марта</p>
+                    </a>
                 </div>
                 <div class="block__price">
-                    <a href="./pages/holiday.html"><img src="./img/main/back__holiday.png" class="test__price" alt="#"></a>
-                    <p>23 Февраля</p>
+                    <a href="./pages/holiday.html">
+                        <img src="./img/main/back__holiday.png" class="test__price" alt="#">
+                        <p>23 Февраля</p>
+                    </a>
                 </div>
                 <div class="block__price">
-                    <a href="./pages/holiday.html"><img src="./img/main/back__holiday.png" class="test__price" alt="#"></a>
-                    <p>Новый год</p>
+                    <a href="./pages/holiday.html">
+                        <img src="./img/main/back__holiday.png" class="test__price" alt="#">
+                        <p>Новый год</p>
+                    </a>
                 </div>
                 <div class="block__price">
-                    <a href="./pages/holiday.html"><img src="./img/main/back__holiday.png" class="test__price" alt="#"></a>
-                    <p>Корпоратив</p>
+                    <a href="./pages/holiday.html">
+                        <img src="./img/main/back__holiday.png" class="test__price" alt="#">
+                        <p>Корпоратив</p>
+                    </a>
                 </div>
                 <div class="block__price">
-                    <a href="./pages/holiday.html"><img src="./img/main/back__holiday.png" class="test__price" alt="#"></a>
-                    <p>День рождения</p>
+                    <a href="./pages/holiday.html">
+                        <img src="./img/main/back__holiday.png" class="test__price" alt="#">
+                        <p>День рождения</p>
+                    </a>
                 </div>
                 <div class="block__price">
-                    <a href="./pages/holiday.html"><img src="./img/main/back__holiday.png" class="test__price" alt="#"></a>
-                    <p>Свадьба</p>
+                    <a href="./pages/holiday.html">
+                        <img src="./img/main/back__holiday.png" class="test__price" alt="#">
+                        <p>Свадьба</p>
+                    </a>
                 </div>
             </div>
             
@@ -87,8 +99,8 @@
                 </div>
                 <div class="addres">
                     <a href="/pages/about.html"><p>О нас</p></a> 
-                        <p>Акции</p> 
-                        <p>Политика конфиденциальности</p> 
+                    <a href="">Акции</a>
+                    <a href="">Политика конфиденциальности</a>
                 </div>
                 <div class="soc__link">
                     <p>© MHD 2022 - 2022</p>
