--- a/pages/basket.html
+++ b/pages/basket.html
@@ -75,10 +75,9 @@
             <div class="total__price">
                 Итого: 80 000₽
             </div>
-
-            <a href="decor.html">
-                <input class="btn__ofor" type="button" value="оформить">
-            </a>
         </div>
+        <a href="decor.html" class="decor__a">
+            <input class="btn__ofor" type="button" value="оформить">
+        </a>
     </body>
 </html>
