--- a/pages/event.html
+++ b/pages/event.html
@@ -36,20 +36,23 @@
         
         <div class="main__event">
             <p>Мероприятие под заказ</p>
-            <div class="event__block">
-                <div class="event__name">Название:</div>
-                <input type="text" placeholder="">
-            </div>
+            <div class="event__block__all">
+                <div class="event__block">
+                    <div class="event__name">Название:</div>
+                    <input type="text" placeholder="" class="event__inp">
+                </div>
 
-            <div class="event__block">
-                <div class="event__name">Описание:</div>
-                <input type="text" placeholder="">
-            </div>
+                <div class="event__block">
+                    <div class="event__name">Описание:</div>
+                    <input type="text" placeholder="" class="event__inp">
+                </div>
 
-            <div class="event__block">
-                <div class="event__name">Ваши пожелания:</div>
-                <input type="text" placeholder="">
+                <div class="event__block">
+                    <div class="event__name">Ваши пожелания:</div>
+                    <input type="text" placeholder="" class="event__inp">
+                </div>
             </div>
+            
             <a href="">
                 <input class="btn__ofor" type="button" value="Подать заявку">
             </a>
