--- a/pages/holiday.html
+++ b/pages/holiday.html
@@ -57,26 +57,31 @@
         </div>
 
         <div class="additional">
-            <div class="additional__block additional__name">
-                Видеооператор
-                <br>
-                Ведущий
-                <br>
-                Декор и оформление    
+            <div class="additional__block ">
+                <!-- <div class="additional__text"></div> -->
+                <label for="pr1" >Видеооператор</label>
+                <div class="additional__price">
+                    + 15.000₽
+                    <input type="checkbox" name="" id="pr1" class="inp__add">
+                </div>
             </div>
-            <div class="additional__block additional__price">
-                + 15.000₽
-                <br>
-                + 10.000₽
-                <br>
-                + 30.000₽ 
+
+            <div class="additional__block ">
+                <!-- <div class="additional__text"></div> -->
+                <label for="lb2">Ведущий</label>
+                <div class="additional__price">
+                    + 10.000₽
+                    <input type="checkbox" name="" id="lb2" class="inp__add">
+                </div>
             </div>
-            <div class="additional__block additional__inp">
-                <input type="checkbox" name="" id="">
-                <br>
-                <input type="checkbox" name="" id="">
-                <br>
-                <input type="checkbox" name="" id="">
+
+            <div class="additional__block ">
+                <!-- <div class="additional__text"></div> -->
+                <label for="lb3">Декор и оформление</label>
+                <div class="additional__price">
+                    + 30.000₽ 
+                    <input type="checkbox" name="" id="lb3" class="inp__add">
+                </div>
             </div>
 
             <div class="price">40.000₽</div>
