--- a/pages/profile.html
+++ b/pages/profile.html
@@ -21,6 +21,7 @@
         <a href="../index.html">
             <div class="logo">
                 My Happy Day
+
             </div>
         </a>
         <div class="header__nav">
@@ -102,7 +103,7 @@
                 </div>
 
                 <div class="phone">
-                    +7(903)972-34-23
+                    +7(903)135-34-23
                     <a data-bs-toggle="modal" data-bs-target="#rephone">
                         <img src="../img/profile/pen.png" alt="редактировать" class="pen">
                     </a>
@@ -129,7 +130,7 @@
                 </div>
 
                 <div class="password">
-                    Пароль
+                    Пароль  оставь его 
                     <a data-bs-toggle="modal" data-bs-target="#repass">
                         <img src="../img/profile/pen.png" alt="редактировать" class="pen">
                     </a>
@@ -155,7 +156,6 @@
                     </div>
                 </div>
 
-                <hr>
                 <hr>
 
                 <a href="reviews.html">
